--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
     "about-link": "About Us",
     "main-link": "home"
   },
-  "lang": "Russian",
+  "lang": "English",
   "error-page": {
     "error-message": "An unexpected error has occurred",
     "reload-page": "Refresh the page"
