--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
   },
   "not-found-page": "Page not found",
   "throw-error": "Simulate error",
-  "lang-short": "En"
+  "lang-short": "En",
+  "Log_In": "Log in",
+  "filler": "Amet ullamco deserunt laborum labore magna"
 }
