--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
     "about-link": "О нас"
   },
   "throw-error": "Имитировать ошибку",
-  "lang-short": "Ru"
+  "lang-short": "Ru",
+  "Log_In": "Войти",
+  "filler": "Amet ullamco deserunt laborum labore magna"
 }
