Добавил компонент Counter работающий  с глобальным состоянием, приложение настроено для работы с глобальным состоянием, тесты для селекторов и слайса

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,7 @@
   "throw-error": "Simulate error",
   "lang-short": "En",
   "Log_In": "Log in",
-  "filler": "Amet ullamco deserunt laborum labore magna"
+  "filler": "Amet ullamco deserunt laborum labore magna",
+  "decrement": "Decrease",
+  "increment": "Increase"
 }
