--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,7 @@
   "throw-error": "Имитировать ошибку",
   "lang-short": "Ru",
   "Log_In": "Войти",
-  "filler": "Amet ullamco deserunt laborum labore magna"
+  "filler": "Amet ullamco deserunt laborum labore magna",
+  "decrement": "Уменьшить",
+  "increment": "Увеличить"
 }
